[package]
name = "idevice"
description = "A Rust library to interact with services on iOS devices."
authors = ["Jackson Coxson"]
version = "0.1.26"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/idevice"
repository = "https://github.com/jkcoxson/idevice"
keywords = ["lockdownd", "ios"]


[dependencies]
tokio = { version = "1.43", features = ["io-util", "macros", "time"] }
tokio-openssl = { version = "0.6" }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tungstenite = { version = "0.20", features = ["native-tls"] }

plist = { version = "1.7" }
serde = { version = "1", features = ["derive"] }
ns-keyed-archive = { version = "0.1.3", optional = true }

thiserror = { version = "2" }
log = { version = "0.4" }
env_logger = { version = "0.11" }

indexmap = { version = "2.7", features = ["serde"], optional = true }
uuid = { version = "1.12", features = ["serde", "v4"], optional = true }
async-recursion = { version = "1.1", optional = true }
base64 = { version = "0.22", optional = true }

serde_json = { version = "1", optional = true }
json = { version = "0.12", optional = true }
byteorder = { version = "1.5", optional = true }

reqwest = { version = "0.12", features = ["json"], optional = true }
rand = { version = "0.9", optional = true }
futures = { version = "0.3", optional = true }

sha2 = { version = "0.10", optional = true }
image = { version = "0.24", optional = true }  

[dev-dependencies]
tokio = { version = "1.43", features = ["fs"] }
tun-rs = { version = "2.0.8", features = ["async_tokio"] }
bytes = "1.10.1"

[features]
core_device_proxy = ["dep:serde_json", "dep:json", "dep:byteorder"]
debug_proxy = []
dvt = ["dep:byteorder", "dep:ns-keyed-archive"]
heartbeat = []
installation_proxy = []
amfi = []
companion_proxy = []
instproxy = []
misagent = []
screenshot = []
simulate_location = []
usbmuxd = []
web_inspector = []

full = [
  "core_device_proxy",
  "debug_proxy",
  "dvt",
  "heartbeat",
  "installation_proxy",
  "amfi",
  "companion_proxy",
  "instproxy",
  "misagent",
  "screenshot",
  "simulate_location",
  "usbmuxd",
  "web_inspector",
  "xpc",
  "tcp",
  "tunnel_tcp_stack",
  "tss",
  "tunneld",
  "afc",
  "house_arrest",
  "file_relay",
  "diagnostics",  # Add to full feature set
]

# Why: https://github.com/rust-lang/cargo/issues/1197
[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10" }
