[package]
name = "idevice-tools"
description = "Rust binary tools to interact with services on iOS devices."
authors = ["Jackson Coxson"]
version = "0.1.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/idevice"
repository = "https://github.com/jkcoxson/idevice"
keywords = ["lockdownd", "ios"]

[[bin]]
name = "ideviceinfo"
path = "src/ideviceinfo.rs"

[[bin]]
name = "heartbeat_client"
path = "src/heartbeat_client.rs"

[[bin]]
name = "instproxy"
path = "src/instproxy.rs"

[[bin]]
name = "mounter"
path = "src/mounter.rs"

[[bin]]
name = "core_device_proxy_tun"
path = "src/core_device_proxy_tun.rs"

[[bin]]
name = "idevice_id"
path = "src/idevice_id.rs"

[[bin]]
name = "process_control"
path = "src/process_control.rs"

[[bin]]
name = "dvt_packet_parser"
path = "src/dvt_packet_parser.rs"

[[bin]]
name = "remotexpc"
path = "src/remotexpc.rs"

[[bin]]
name = "debug_proxy"
path = "src/debug_proxy.rs"

[[bin]]
name = "misagent"
path = "src/misagent.rs"

[[bin]]
name = "afc_tool"
path = "src/afc_tool.rs"

[[bin]]
name = "screenshot_tool"
path = "src/screenshot_tool.rs"

[[bin]]
name = "house_arrest_tool"
path = "src/house_arrest_tool.rs"

[[bin]]
name = "file_relay_tool"
path = "src/file_relay_tool.rs"

[[bin]]
name = "diagnostics_tool"
path = "src/diagnostics_tool.rs"

[[bin]]
name = "notification_proxy_tool"
path = "src/notification_proxy_tool.rs"

[[bin]]
name = "mobile_backup_tool"
path = "src/mobile_backup_tool.rs"

[dependencies]
idevice = { path = "../idevice", features = ["full"] }
tokio = { version = "1.43", features = ["io-util", "macros", "time", "full"] }
log = { version = "0.4" }
env_logger = { version = "0.11" }
tun-rs = { version = "1.5", features = ["async"] }
sha2 = { version = "0.10" }
ureq = { version = "3" }
clap = { version = "4.5" }
plist = { version = "1.7" }
ns-keyed-archive = "0.1.2"
